--- a/style.css
+++ b/style.css
@@ -1,38 +1,86 @@
-header{
-	position: relative;
-	margin: auto;
-	text-align: center;
-	padding: 5px;
-	background: #2980b9;
-	color: white;
+/* Custom Properties */
+:root {
+  --main-color: #F0DB4F;
+  --main-modal-color: rgba(240, 219, 79, .5);
+  --second-color: #2B2B2B;
+  --second-modal-color: rgba(43, 43, 43, .5);
 }
-nav{
-	position: relative;
-	margin: auto;
-	width: 100%;
-	height: auto;
-	background: #34495e;
+
+html {
+  box-sizing: border-box;
+  font-family: 'Raleway', sans-serif;
+  font-size: 16px;
+  line-height: 1.6;
+  color: var(--second-color);
+  background-color: var(--main-modal-color);
 }
-nav ul{
-	position: relative;
-	margin: auto;
-	width: 50%;
-	text-align: center;
+
+*,
+*:after,
+*:before {
+  box-sizing: inherit;
+  padding: 0;
+  margin: 0;
 }
-nav ul li{
-	display: inline-block;
-	width: 24%;
-	line-height: 50px;
-	list-style: none;
+
+body {
+  margin: 2rem auto;
+  overflow-x: hidden;
+  max-width: 800px;
 }
-nav ul li a{
-	color: white;
-	text-decoration: none;
+
+a {
+  font-weight: bold;
+  color: var(--second-color);
+  transition: all .3s ease-out;
 }
-section{
-	position: relative;
-	padding: 20px;
+
+a:hover {
+  color: var(--second-modal-color);
 }
-footer{
-	display: block;
+
+p {
+  padding: 1rem;
+  font-size: 1.25rem;
 }
+
+::selection {
+  background-color: var(--second-color);
+  color: var(--main-color);
+}
+
+.Header {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.Header h1 { word-wrap: break-word; }
+
+.Header img {
+  margin: 0 auto;
+  display: block;
+  max-width: 170px;
+  border-radius: 50%;
+}
+
+.Header nav {
+  padding: 2rem 0;
+  display: flex;
+  justify-content: space-evenly;
+  font-size: 3rem;
+}
+
+.Main {
+  position: relative;
+  margin: 0 auto;
+  padding-bottom: 56.25%; /* 16:9 */
+}
+
+.Main iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
