--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Custom Properties */
 :root {
-  --main-color: #F0DB4F;
-  --main-modal-color: rgba(240, 219, 79, .5);
+  --main-color: #03A9F4;
+  --main-modal-color: #0fd6cdf5;
   --second-color: #2B2B2B;
   --second-modal-color: rgba(43, 43, 43, .5);
 }
