--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Custom Properties */
 :root {
-  --main-color: #03A9F4;
+  --main-color: #0fd6cdf5;
   --main-modal-color: #0fd6cdf5;
   --second-color: #2B2B2B;
   --second-modal-color: rgba(43, 43, 43, .5);
